deployments/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: vacupet-server-service
spec:
  selector:
    app: vacupet_server
  ports:
    - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: vacupet-client-service
spec:
  selector:
    app: vacupet_client
  ports:
    - port: 4200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vacupet-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: vacupet
    spec:
      containers:
        - name: vacupet-db-postgresql
          image: 'postgres:14'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
        - name: vacupet-server
          image: jonathanlnb/vacupet_server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: [ "/bin/sh", "-c", "npm start" ]
        - name: vacupet-client
          image: jonathanlnb/vacupet_client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
          command: [ "/bin/sh", "-c", "ng serve --host 0.0.0.0" ]
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: vacupet-database-volume-postgresql
  selector:
    matchLabels:
      app: vacupet
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacupet-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: k8.vacupetservercodigofacilito.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacupet-server
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacupet-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: k8.vacupetclientcodigofacilito.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacupet-client
                port:
                  number: 4200
